# nds-openocd

./: .gitmodules  Makefile.am  bootstrap  configure.ac
contrib/loaders/flash/ndsspi200/: Makefile  ndsspi200.S  ndsspi200.inc
doc/: openocd.texi
src/: openocd.c
src/flash/nor/: Makefile.am  drivers.c  fm4.c  jtagspi.c  kinetis.c  nds_spiflash.c  ndsspi200.c  numicro.c  spi.c  tcl.c
src/helper/: command.c  log.c  log.h
src/jtag/: Makefile.am  adapter.c  adapter.h  core.c  tcl.c
src/jtag/aice/: Makefile.am  aice_apis.c  aice_apis.h  aice_cache.c  aice_interface.c  aice_jdp.h  aice_memory.c  aice_pipe.c  aice_pipe.h  aice_port.c  aice_port.h  aice_print_info.c  aice_profile.c  aice_register.c  aice_transport.c  aice_usb.c  aice_usb.h  aice_usb_command.c  aice_usb_command.h  aice_usb_pack_format.c  aice_usb_pack_format.h  aice_vendor.c
src/jtag/aice2/: Makefile.am  aice_apis.c  aice_apis.h  aice_cache.c  aice_interface.c  aice_jdp.h  aice_memory.c  aice_pipe.c  aice_port.h  aice_print_info.c  aice_profile.c  aice_register.c  aice_transport.c  aice_usb.c  aice_usb.h  aice_usb_command.c  aice_usb_command.h  aice_usb_pack_format.c  aice_vendor.c
src/jtag/drivers/: Makefile.am  ftdi.c  libusb0_common.c  libusb0_common.h  libusb10_common.c  libusb10_common.h  libusb1_common.c  libusb1_common.h  libusb_common.h  mpsse.c  mpsse.h  remote_bitbang.c
src/rtos/: Makefile.am  hwthread.c  riscv_debug.c  rtos.c  rtos.h
src/server/: Makefile.am  gdb_fileio.h  gdb_server.c  gdb_server.h  server.c  server.h  telnet_server.c
src/transport/: transport.c
