noinst_LTLIBRARIES += %D%/libocdaice.la

%C%_libocdaice_la_CPPFLAGS = -I$(top_srcdir)/src/jtag/drivers $(AM_CPPFLAGS) $(LIBUSB1_CFLAGS) $(LIBUSB0_CFLAGS)
%C%_libocdaice_la_SOURCES = \
	%D%/aice_transport.c \
	%D%/aice_interface.c \
	%D%/aice_port.c \
	%D%/aice_usb.c \
	%D%/aice_pipe.c \
	%D%/aice_usb_pack_format.c \
	%D%/aice_usb_command.c \
	%D%/aice_apis.c \
	%D%/aice_register.c \
	%D%/aice_memory.c \
	%D%/aice_cache.c \
	%D%/aice_print_info.c \
	%D%/aice_profile.c \
	%D%/aice_vendor.c \
	%D%/aice_transport.h \
	%D%/aice_interface.h \
	%D%/aice_port.h \
	%D%/aice_usb.h \
	%D%/aice_pipe.h \
	%D%/aice_usb_pack_format.h \
	%D%/aice_usb_command.h \
	%D%/aice_apis.h \
	%D%/aice_jdp.h


